--- a/index.html
+++ b/index.html
@@ -47,17 +47,20 @@
             position: fixed;
             inset: 0;
             background: var(--bg, #0a0a0a);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            z-index: 9999;
+            z-index: 10000;
         }
 
         .loading-screen.hidden {
             opacity: 0;
+            visibility: hidden;
             pointer-events: none;
-            transition: opacity 0.4s ease-out;
+            transition: opacity 0.5s ease-in-out, visibility 0.5s;
         }
 
         .loading-logo {
@@ -100,6 +103,7 @@
             color: var(--text-dim, #52525b);
             font-size: 0.875rem;
         }
+
 
         .launch-screen {
             position: fixed;
