--- a/pages/player.html
+++ b/pages/player.html
@@ -9,15 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../components/topbar.css">
-    <link rel="stylesheet" href="../styles/player.css">
+    <link rel="stylesheet" href="../styles/player.css?v=2">
 </head>
 
 <body>
     <script src="../components/topbar.js"></script>
 
     <div class="player-page">
+
+
         <div class="player-container">
             <div class="player-frame-wrapper" id="frame-wrapper">
+                <div class="theater-glow"></div>
                 <iframe class="player-frame" id="game-frame" allowfullscreen></iframe>
             </div>
 
@@ -41,11 +44,15 @@
                 <button class="control-btn" id="btn-download" style="display:none;">
                     <i class="fa-solid fa-download"></i> Download
                 </button>
+
                 <button class="control-btn" id="btn-reload">
                     <i class="fa-solid fa-rotate-right"></i> Reload
                 </button>
                 <button class="control-btn" id="btn-newtab">
                     <i class="fa-solid fa-up-right-from-square"></i> Open in New Tab
+                </button>
+                <button class="control-btn" id="btn-theater">
+                    <i class="fa-solid fa-masks-theater"></i> Theater Mode
                 </button>
                 <button class="control-btn" id="btn-fullscreen">
                     <i class="fa-solid fa-expand"></i> Fullscreen
