--- a/pages/settings.html
+++ b/pages/settings.html
@@ -240,8 +240,9 @@
                             <div class="setting-label">Default Library</div>
                         </div>
                         <select class="setting-select" id="game-library">
-                            <option value="lib1">Library 1 (With covers)</option>
-                            <option value="lib2">Library 2 (More games)</option>
+                            <option value="multi">Multi (Default)</option>
+                            <option value="gnmath">Gnmath (With covers)</option>
+                            <option value="ugs">UGS (More games)</option>
                         </select>
                     </div>
                 </div>
