--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/search.css">
     <link rel="stylesheet" href="components/topbar.css">
-    
+
     <style>
         html,
         body {
@@ -196,6 +196,7 @@
     <script src="scripts/quotes.js"></script>
     <script src="scripts/notifications.js"></script>
     <script src="scripts/featured.js"></script>
+    <script src="components/UGSfiles.js"></script>
     <script src="scripts/search.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js"></script>
     <script type="module">
@@ -304,7 +305,7 @@
 
 
     </script>
-    
+
     <script src="components/footer.js"></script>
 
     <script>
