--- a/pages/chatbot.html
+++ b/pages/chatbot.html
@@ -57,7 +57,7 @@
           <button class="menu-toggle" id="menuToggle">
             <i class="fas fa-bars"></i>
           </button>
-          <span class="chat-title" id="chatTitle">New Chat</span>
+          <span class="chat-title" id="chatTitle">Phantom Session</span>
         </div>
 
         <div class="header-right">
@@ -75,7 +75,10 @@
       <!-- Zero State / Hero -->
       <div class="hero-section" id="heroSection">
         <h1 class="hero-title">Phantom AI</h1>
-        <p class="hero-subtitle">I can generate text, code, math, and images</p>
+        <p class="hero-subtitle text-dim">Ethereal intelligence at your fingertips.</p>
+
+        <!-- Optional: Add a subtle divider using design system colors -->
+        <div style="width: 40px; height: 2px; background: var(--accent); margin: 20px auto; opacity: 0.3;"></div>
       </div>
 
       <!-- Input Area -->
