--- a/pages/settings.html
+++ b/pages/settings.html
@@ -232,6 +232,13 @@
                             <option value="R">R</option>
                         </select>
                     </div>
+                    <div class="setting-row">
+                        <div class="setting-info">
+                            <div class="setting-label">Auto-Switch Providers</div>
+                            <div class="setting-desc">Automatically switch if a movie source fails to load</div>
+                        </div>
+                        <div class="toggle" id="autoswitch-toggle"></div>
+                    </div>
                 </div>
                 <div class="settings-section">
                     <h2 class="section-title"><i class="fa-solid fa-gamepad"></i> Games</h2>
