--- a/staticsjv2/index.html
+++ b/staticsjv2/index.html
@@ -7,9 +7,9 @@
     <title>Browser</title>
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj/JS/scramjet.all.js" defer></script>
     <script type="module">
-        import * as BareMux from "https://cdn.jsdelivr.net/npm/@mercuryworkshop/bare-mux/dist/index.mjs";
+        import * as BareMux from "https://cdn.jsdelivr.net/npm/mercuryworkshop/bare-mux/dist/index.mjs";
         window.BareMux = BareMux;
     </script>
     <script src="../config.js"></script>
