--- a/pages/extra.html
+++ b/pages/extra.html
@@ -17,10 +17,8 @@
     <script src="../scripts/notifications.js"></script>
     <script src="../components/topbar.js"></script>
 
-    <div style="max-width: 700px; margin: 0 auto; padding: 80px 24px 40px;">
-        <h1 style="font-size: 1.75rem; margin-bottom: 24px;">Extra</h1>
-
-        <div id="extra-content" style="color: var(--text-muted); line-height: 1.8; font-size: 0.9375rem;">
+    <div style="max-width: 700px; margin: 0 auto; padding: 120px 24px 40px;">
+        <div id="extra-content" style="color: var(--text-muted); line-height: 1.8; font-size: 0.9375rem; opacity: 0.7;">
             Loading content...
         </div>
 
