--- a/pages/extra.html
+++ b/pages/extra.html
@@ -35,7 +35,8 @@
         async function loadExtraContent() {
             const container = document.getElementById('extra-content');
             try {
-                const response = await fetch('https://cdn.jsdelivr.net/gh/Destroyed12121/Phantom101/extra.js');
+                const timestamp = new Date().getTime();
+                const response = await fetch(`https://raw.githubusercontent.com/Destroyed12121/Phantom101/main/extra.js?t=${timestamp}`);
                 if (response.ok) {
                     const text = await response.text();
                     container.textContent = text;
