--- a/pages/extra.html
+++ b/pages/extra.html
@@ -32,6 +32,19 @@
 
     <script src="../components/footer.js"></script>
     <script>
+        function formatText(text) {
+            // Escape HTML
+            const escaped = text
+                .replace(/&/g, "&amp;")
+                .replace(/</g, "&lt;")
+                .replace(/>/g, "&gt;")
+                .replace(/"/g, "&quot;")
+                .replace(/'/g, "&#039;");
+
+            // Bold: **text** or __text__
+            return escaped.replace(/(\*\*|__)(.*?)\1/g, '<b>$2</b>');
+        }
+
         async function loadExtraContent() {
             const container = document.getElementById('extra-content');
             try {
@@ -39,7 +52,7 @@
                 const response = await fetch(`https://raw.githubusercontent.com/Destroyed12121/Phantom101/master/extra.js?t=${timestamp}`);
                 if (response.ok) {
                     const text = await response.text();
-                    container.textContent = text;
+                    container.innerHTML = formatText(text);
                 } else {
                     container.textContent = 'Failed to load content.';
                     if (window.Notify) Notify.error('Error', 'Failed to load extra content.');
