--- a/pages/games.html
+++ b/pages/games.html
@@ -260,6 +260,7 @@
 
             <div class="select-wrapper">
                 <select id="lib-select">
+                    <option value="multi">Multi (Default)</option>
                     <option value="gnmath">Gnmath</option>
                     <option value="ugs">UGS</option>
                 </select>
