--- a/pages/music.html
+++ b/pages/music.html
@@ -84,6 +84,8 @@
                         <div class="mode-badge" id="radioBadge"><i class="fa-solid fa-radio"></i> Radio</div>
                         <button class="mode-badge" id="proxyBtn" title="Use Proxy for embedded content"><i
                                 class="fa-solid fa-shield-halved"></i> Proxy</button>
+                        <button class="mode-badge show" id="videoToggleBtn" title="Toggle Video"><i
+                                class="fa-solid fa-ellipsis"></i></button>
                     </div>
                     <div class="track-title" id="trackTitle">No track selected</div>
                     <div class="track-artist" id="trackArtist">Select a source and search</div>
