--- a/index.html
+++ b/index.html
@@ -137,11 +137,22 @@
             height: 100%;
             border: none;
         }
+
+        /* Panic white screen */
+        #panic-overlay {
+            position: fixed;
+            inset: 0;
+            background: white;
+            z-index: 99999;
+            display: none;
+        }
     </style>
     <script src="config.js"></script>
     <script src="scripts/settings.js"></script>
     <script src="scripts/cloaking.js"></script>
     <link rel="stylesheet" href="styles/error.css">
+    <link rel="stylesheet" href="styles/background.css">
+    <script src="scripts/background.js"></script>
 </head>
 
 <body>
@@ -230,7 +241,52 @@
         <button id="launch-button" class="launch-button"> Launch Phantom</button>
     </div>
 
+    <!-- Panic White Screen Overlay -->
+    <div id="panic-overlay"></div>
+
     <iframe id="main-frame"></iframe>
+
+    <script>
+        // Panic Key Handler for index.html - Fast white screen
+        document.addEventListener('keydown', (e) => {
+            // Get settings
+            let panicKey = 'x';
+            let panicModifiers = ['ctrl', 'shift'];
+            let panicUrl = 'https://classroom.google.com';
+
+            try {
+                const settings = JSON.parse(localStorage.getItem('void_settings') || '{}');
+                if (settings.panicKey) panicKey = settings.panicKey;
+                if (settings.panicModifiers) panicModifiers = settings.panicModifiers;
+                if (settings.panicUrl) panicUrl = settings.panicUrl;
+            } catch (err) { }
+
+            // Check if required modifiers are pressed
+            const ctrlRequired = panicModifiers.includes('ctrl');
+            const shiftRequired = panicModifiers.includes('shift');
+            const altRequired = panicModifiers.includes('alt');
+
+            // Match if required modifiers match AND unrequired modifiers are not pressed
+            const ctrlMatch = ctrlRequired ? e.ctrlKey : !e.ctrlKey;
+            const shiftMatch = shiftRequired ? e.shiftKey : !e.shiftKey;
+            const altMatch = altRequired ? e.altKey : !e.altKey;
+
+            if (ctrlMatch && shiftMatch && altMatch && e.key.toLowerCase() === panicKey.toLowerCase()) {
+                e.preventDefault();
+
+                // Show white screen instantly
+                const overlay = document.getElementById('panic-overlay');
+                overlay.style.display = 'block';
+
+                // Redirect immediately
+                try {
+                    window.location.replace(panicUrl);
+                } catch (err) {
+                    window.location.href = panicUrl;
+                }
+            }
+        }, true); // Use capture phase for faster response
+    </script>
 
     <script>
         const loadingScreen = document.getElementById('loading-screen');
