--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/search.css">
     <link rel="stylesheet" href="components/topbar.css">
+    <link rel="stylesheet" href="styles/background.css">
 
     <style>
         html,
@@ -193,10 +194,13 @@
     </style>
     <script src="config.js"></script>
     <script src="scripts/settings.js"></script>
+    <script src="scripts/cloaking.js"></script>
     <script src="scripts/quotes.js"></script>
     <script src="scripts/notifications.js"></script>
+    <script src="scripts/background.js"></script>
     <script src="scripts/featured.js"></script>
     <script src="components/UGSfiles.js"></script>
+    <script src="scripts/movies.js"></script>
     <script src="scripts/search.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js"></script>
     <script type="module">
