--- a/pages/settings.html
+++ b/pages/settings.html
@@ -47,9 +47,6 @@
                             <option value="blob">Blob URL</option>
                         </select>
                     </div>
-
-
-
                 </div>
 
                 <div class="settings-section">
@@ -268,100 +265,101 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="settings-panel" id="panel-content">
-                    <div class="settings-section">
-                        <h2 class="section-title"><i class="fa-solid fa-film"></i> Movies</h2>
-                        <div class="setting-row">
-                            <div class="setting-info">
-                                <div class="setting-label">Maximum Rating</div>
-                                <div class="setting-desc">Filter movies by rating</div>
-                            </div>
-                            <select class="setting-select" id="max-rating">
-                                <option value="G">G</option>
-                                <option value="PG">PG</option>
-                                <option value="PG-13">PG-13</option>
-                                <option value="R">R</option>
-                            </select>
+            <div class="settings-panel" id="panel-content">
+                <div class="settings-section">
+                    <h2 class="section-title"><i class="fa-solid fa-film"></i> Movies</h2>
+                    <div class="setting-row">
+                        <div class="setting-info">
+                            <div class="setting-label">Maximum Rating</div>
+                            <div class="setting-desc">Filter movies by rating</div>
                         </div>
-                        <div class="setting-row">
-                            <div class="setting-info">
-                                <div class="setting-label">Auto-Switch Providers</div>
-                                <div class="setting-desc">Automatically switch if a movie source fails to load</div>
-                            </div>
-                            <div class="toggle" id="autoswitch-toggle"></div>
-                        </div>
+                        <select class="setting-select" id="max-rating">
+                            <option value="G">G</option>
+                            <option value="PG">PG</option>
+                            <option value="PG-13">PG-13</option>
+                            <option value="R">R</option>
+                        </select>
                     </div>
-                    <div class="settings-section">
-                        <h2 class="section-title"><i class="fa-solid fa-gamepad"></i> Games</h2>
-                        <div class="setting-row">
-                            <div class="setting-info">
-                                <div class="setting-label">Default Library</div>
-                            </div>
-                            <select class="setting-select" id="game-library">
-                                <option value="multi">Multi (Default)</option>
-                                <option value="gnmath">Gnmath (With covers)</option>
-                                <option value="ugs">UGS (More games)</option>
-                            </select>
+                    <div class="setting-row">
+                        <div class="setting-info">
+                            <div class="setting-label">Auto-Switch Providers</div>
+                            <div class="setting-desc">Automatically switch if a movie source fails to load</div>
                         </div>
+                        <div class="toggle" id="autoswitch-toggle"></div>
                     </div>
                 </div>
-
-                <div class="settings-panel" id="panel-widgets">
-                    <div class="settings-section">
-                        <h2 class="section-title"><i class="fa-brands fa-discord"></i> Discord</h2>
-                        <div class="setting-row">
-                            <div class="setting-info">
-                                <div class="setting-label">Show Discord Widget</div>
-                            </div>
-                            <div class="toggle active" id="discord-toggle"></div>
+                <div class="settings-section">
+                    <h2 class="section-title"><i class="fa-solid fa-gamepad"></i> Games</h2>
+                    <div class="setting-row">
+                        <div class="setting-info">
+                            <div class="setting-label">Default Library</div>
                         </div>
-                    </div>
-                    <div class="settings-section">
-                        <h2 class="section-title"><i class="fa-solid fa-music"></i> Music</h2>
-                        <div class="setting-row">
-                            <div class="setting-info">
-                                <div class="setting-label">Show Mini Player (SOON)</div>
-                            </div>
-                            <div class="toggle active" id="miniplayer-toggle"></div>
-                        </div>
-                    </div>
-                    <div class="settings-section">
-                        <h2 class="section-title"><i class="fa-solid fa-clock-rotate-left"></i> Updates</h2>
-                        <div class="setting-row">
-                            <div class="setting-info">
-                                <div class="setting-label">Show Changelog on Update</div>
-                                <div class="setting-desc">Automatically show changelog when Phantom is updated</div>
-                            </div>
-                            <div class="toggle active" id="changelog-toggle"></div>
-                        </div>
+                        <select class="setting-select" id="game-library">
+                            <option value="multi">Multi (Default)</option>
+                            <option value="gnmath">Gnmath (With covers)</option>
+                            <option value="ugs">UGS (More games)</option>
+                        </select>
                     </div>
                 </div>
+            </div>
 
-                <div class="settings-panel" id="panel-data">
-                    <div class="settings-section">
-                        <h2 class="section-title"><i class="fa-solid fa-database"></i> Storage</h2>
-                        <div class="setting-row">
-                            <div class="setting-info">
-                                <div class="setting-label">Clear Cache</div>
-                            </div>
-                            <button class="btn btn-danger" id="clear-cache"><i class="fa-solid fa-trash"></i>
-                                Clear</button>
+            <div class="settings-panel" id="panel-widgets">
+                <div class="settings-section">
+                    <h2 class="section-title"><i class="fa-brands fa-discord"></i> Discord</h2>
+                    <div class="setting-row">
+                        <div class="setting-info">
+                            <div class="setting-label">Show Discord Widget</div>
                         </div>
-                        <div class="setting-row">
-                            <div class="setting-info">
-                                <div class="setting-label">Reset All Settings</div>
-                            </div>
-                            <button class="btn btn-danger" id="reset-settings"><i class="fa-solid fa-rotate-left"></i>
-                                Reset</button>
+                        <div class="toggle active" id="discord-toggle"></div>
+                    </div>
+                </div>
+                <div class="settings-section">
+                    <h2 class="section-title"><i class="fa-solid fa-music"></i> Music</h2>
+                    <div class="setting-row">
+                        <div class="setting-info">
+                            <div class="setting-label">Show Mini Player (SOON) <span style="font-size: 0.75rem; color: var(--text-muted);">cough  never happening lowk cough</span></div>
                         </div>
+                        <div class="toggle active" id="miniplayer-toggle"></div>
+                    </div>
+                </div>
+                <div class="settings-section">
+                    <h2 class="section-title"><i class="fa-solid fa-clock-rotate-left"></i> Updates</h2>
+                    <div class="setting-row">
+                        <div class="setting-info">
+                            <div class="setting-label">Show Changelog on Update</div>
+                            <div class="setting-desc">Automatically show changelog when Phantom is updated</div>
+                        </div>
+                        <div class="toggle active" id="changelog-toggle"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="settings-panel" id="panel-data">
+                <div class="settings-section">
+                    <h2 class="section-title"><i class="fa-solid fa-database"></i> Storage</h2>
+                    <div class="setting-row">
+                        <div class="setting-info">
+                            <div class="setting-label">Clear Cache</div>
+                        </div>
+                        <button class="btn btn-danger" id="clear-cache"><i class="fa-solid fa-trash"></i>
+                            Clear</button>
+                    </div>
+                    <div class="setting-row">
+                        <div class="setting-info">
+                            <div class="setting-label">Reset All Settings</div>
+                        </div>
+                        <button class="btn btn-danger" id="reset-settings"><i class="fa-solid fa-rotate-left"></i>
+                            Reset</button>
                     </div>
                 </div>
             </div>
         </div>
-
-        <script src="../components/footer.js"></script>
-        <script src="../scripts/settingspage.js"></script>
+    </div>
+    </div>
+    <script src="../components/footer.js"></script>
+    <script src="../scripts/settingspage.js"></script>
 </body>
 
 </html>
